--- a/chat.css
+++ b/chat.css
@@ -1,3 +1,9 @@
+*{
+    -webkit-tap-highlight-color: transparent;
+}
+
+/* chat class */
+
 .chat{
     top: 0;
     margin-right: 20px;
@@ -16,10 +22,9 @@
     right: 0;
     background-image: linear-gradient(to bottom,rgb(150, 150, 244),pink);
 }
-.msg-output>a{
-    display: block;
-    color: black;
-}
+
+/* chathead with close button */
+
 .chat>.chat-head{
     
     font-size: x-large;
@@ -30,51 +35,7 @@
     flex: 0.1;
     border-bottom: 1px solid grey;
 }
-.chat-input{
-    display: flex;
-    flex: 0.1;
-}
-.chat-input>input{
-    border: none;
-    flex: 0.8;
-    font-size: larger;
-}
-.chat-input>input:focus{
-    outline: none;
-}
-.chat-input>button{
-    font-size:larger;
-    color: rgb(255, 255, 255);
-    flex: 0.2;
-    border: none;
-    background-color:#c58aea;
-     cursor: pointer;
-}
-.chat-body{
-    overflow-y:auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    flex: 0.8;
-}
-.chat-body::-webkit-scrollbar {
-    display: none;
-  }
-.chat-body {
-    -ms-overflow-style: none;
-    scrollbar-width: none;  
-}
-.chat-btn{
-    width: 60px;
-    padding: 10px;
-    position:fixed;
-    right: 0px;
-    bottom: 0px;
-    cursor: pointer;
 
-}
 .close{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     cursor: pointer;
@@ -93,26 +54,89 @@
     height: 3px;
     background-color: #f9faf4;
 }
-.chat-btn:hover{
-    transform: scale(1.2,1.2);
+
+/* chatbody */
+
+.chat-body{
+    overflow-y:auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    flex: 0.8;
 }
-.chat-body>.msg-input{
+.chat-body::-webkit-scrollbar {
+    display: none;
+  }
+.chat-body {
+    -ms-overflow-style: none;
+    scrollbar-width: none;  
+}
+
+.chat-body .msg-input{
     border-radius: 10px;
     padding: 5px;
     margin: 5px;
-    align-self: flex-end;
+    align-self: end;
     background-color: #a7eeb0;
 }
-.chat-body>.msg-output{
+.chat-body .msg-output{
     border-radius: 10px;
     padding: 5px;
     margin: 5px;
-    align-self: flex-start;
+    align-self: start;
     background-color: #bfeef7;
 }
 .msg-output>label{
     display: block;
 }
+.msg-output>a{
+    display: block;
+    color: black;
+}
+
+/* chatinput */
+
+.chat-input{
+    display: flex;
+    flex: 0.1;
+}
+.chat-input>input{
+    border: none;
+    flex: 0.8;
+    font-size: larger;
+}
+.chat-input>input:focus{
+    outline: none;
+}
+.chat-input>button{
+    font-size:1vw;
+    color: rgb(255, 255, 255);
+    flex: 0.2;
+    border: none;
+    background-color:#c58aea;
+     cursor: pointer;
+}
+
+/* chatbtn class for the chatbutton image */
+
+.chat-btn{
+    width: 60px;
+    padding: 10px;
+    position:fixed;
+    right: 0px;
+    bottom: 0px;
+    cursor: pointer;
+
+}
+
+.chat-btn:hover{
+    transform: scale(1.2,1.2);
+}
+
+/* media query*/
+
 @media only screen and (max-width:1100px){
     .chat{
         width: 40vw;
@@ -123,13 +147,15 @@
     .chat{
         width: 80vw;
     }
-    
+    .chat-input>button{
+        font-size: 3vw;
+    }
 }
 
 
 
 
-/* test class functionality(instruction) don't copy this css code*/
+/* test class functionality(instruction) don't copy this css code only for instruction*/
 .test{
     display: flex;
     justify-content: center;
