--- a/chat.css
+++ b/chat.css
@@ -66,13 +66,13 @@
     padding: 5px;
     flex: 0.8;
 }
-.chat-body::-webkit-scrollbar {
+/* .chat-body::-webkit-scrollbar {
     display: none;
   }
 .chat-body {
     -ms-overflow-style: none;
     scrollbar-width: none;  
-}
+} */
 
 .chat-body .msg-input{
     border-radius: 10px;
